--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 baseURL = "/"
 languageCode = "es"
 title = "Networking Professional Links"
-theme = ""
-disableKinds = ["taxonomy", "taxonomyTerm"]
+# Eliminar la línea de theme vacía o configurar correctamente
+disableKinds = ["taxonomy", "term"]
 
 [params]
   description = "Herramientas profesionales para networking"
