--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,6 @@
 baseURL = "/"
 languageCode = "es"
 title = "Networking Professional Links"
-# Eliminar la línea de theme vacía o configurar correctamente
 disableKinds = ["taxonomy", "term"]
 
 [params]
@@ -9,3 +8,5 @@ disableKinds = ["taxonomy", "term"]
   author = "Networking Professional"
   mainImage = "https://cdn.pixabay.com/photo/2018/05/08/08/44/artificial-intelligence-3382507_960_720.jpg"
   favicon = "https://cdn.pixabay.com/photo/2016/12/18/13/45/download-1915753_960_720.png"
+  socialImageWidth = "1200"
+  socialImageHeight = "630"
