--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ disableKinds = ["taxonomy", "term"]
   description = "Herramientas profesionales para networking"
   author = "Networking Professional"
   mainImage = "https://cdn.pixabay.com/photo/2018/05/08/08/44/artificial-intelligence-3382507_960_720.jpg"
+  socialImage = "https://cdn.pixabay.com/photo/2017/03/23/20/57/banner-2169593_960_720.jpg"
   favicon = "https://cdn.pixabay.com/photo/2016/12/18/13/45/download-1915753_960_720.png"
   socialImageWidth = "1200"
   socialImageHeight = "630"
